			Java Electric change log

************************* Version 8.00a: Released  *************************

IMP: (5/24/04, SMR) Renamed "grab" to "anchor" everywhere.

IMP: (5/24/04, JKG) Improved Pad Generator

IMP: (5/24/04, SMR) Added node alignment commands "Edit / Move / Align..."

BUG: (5/24/04, SMR) During long library input, concurrency exception is thrown.
FIX: Synchronized maintenance of cell lists in Library.java.

IMP: (5/24/04, SMR) Added "Edit / Move / Spread..."

IMP: (5/24/04, SMR) Added "Edit / Move / Move Objects By..."

IMP: (5/23/04, SMR) Implemented "Text" panel of "Edit Options".

IMP: (5/23/04, SMR) Implemented ability to disable file-selection dialogs for netlist output.

IMP: (5/23/04, SMR) Implemented saving of primitive node sizes.

IMP: (5/21/04, SMR) Added EDialog class as super to all dialogs to remember position.

IMP: (5/21/04, SMR) Added Layer.getPureLayerNode() to obtain the pure-layer node associated with a Layer.

IMP: (5/21/04, GVG) Coverage Implants functionality in MenuCommands added.

FIX: (5/20/04, JKG) LE.subdrive() fixed. Various EvalJavaBsh code clean-up. Now uses reflection only. 

IMP: (5/20/04, JKG) New dialogs.

IMP: (5/19/04, SMR) Text-edit windows now work.

BUG: (5/18/04, SMR) Should show ports on expanded cells that aren't wired or further exported.
FIX: Fixed in "PixelDrawing.java"

BUG: (5/18/04, SMR) Redisplay sometimes misses parts of the image.
FIX: In "EditWindow.CircuitPart.paint()" must always draw something.

IMP: (5/17/04, SMR) Added Flip-flop creation and support.

BUG: (5/17/04, SMR) When a cell is displayed, its bounds are set to include text.
FIX: In "EditWindow.fillScreen()" do not adjust the cell bounds stored in the cell.

BUG: (5/17/04, SMR) When a library is read back in, existing windows remain to its former contents.
FIX: In "Input.java" clear windows that reference replaced libraries.

BUG: (5/17/04, SMR) When an arc changes its "end extension", its bounds are not recomputed.