@@ -1,6 +1,7 @@
 			Java Electric change log
 
 ************************* Version 8.00a: Released  *************************
+IMP: (5/25/04, GVG) Coverage implants: more robust functions. Option added under Tool->Generation->Coverage Implants Generator
 
 IMP: (5/24/04, SMR) Renamed "grab" to "anchor" everywhere.
 
